--- a/Express2/views/custom.ejs
+++ b/Express2/views/custom.ejs
@@ -1,3 +1,7 @@
-<link rel="stylesheet"  href="/style.css">
+<% include partials/header %>
+
 <h1>Congratulations on making it to my custom page. Here's your cookie -></h1>
 <h2>Custom text is - <%= data %> </h2>
+
+
+<% include partials/footer %>
