--- a/YelpCamp/views/newCampground.ejs
+++ b/YelpCamp/views/newCampground.ejs
@@ -1,23 +1,28 @@
 <% include partials/header %>
 
-<div class="container text-center">
+<div class="container text-center border" style="max-width: 600px; margin-top: 3%;">
 	<h1>Create new Campground</h1>
-	
-	<div class="container" style="max-width: 400px; margin-top: 3%;">
-		<form action="/campgrounds" method="POST">
-			<div class="form-group">
-			<input type="text" name="name" class="form-control" placeholder="Camp Name">
-			</div>
-			<div class="form-group">
-			<input type="text" name="src" class="form-control" placeholder="ImageURL">
-			</div>
-			<div class="form-group">
-			<textarea name="desc" class="form-control" placeholder="Description">
-			</textarea>
-			</div>
-			<button class="btn btn-primary btn-large btn-block" type="submit">Add New camp</button>
-			<div style="text-align: left; margin-top: 2%"><a href="/campgrounds">Go Back</a></div>
-		</form>
-	</div>
+	<form action="/campgrounds" class="form-horizontal" method="POST">
+		<div class="form-group">
+      <label for="name" class="col-sm-2 control-label">Name:</label>
+      <div class="col-sm-10">
+        <input type="text" name="name" class="form-control" placeholder="Camp Name">
+      </div>
+    </div>
+		<div class="form-group">
+      <label for="name" class="col-sm-2 control-label">Image URL:</label>
+      <div class="col-sm-10">
+        <input type="text" name="src" class="form-control" placeholder="ImageURL">
+      </div>
+    </div>
+		<div class="form-group">
+      <label for="name" class="col-sm-2 control-label">Description:</label>
+      <div class="col-sm-10">
+        <textarea name="desc" class="form-control" rows="10" placeholder="Description"></textarea>
+      </div>
+    </div>
+    <br>
+		<button class="btn btn-primary btn-large btn-block" type="submit">Add New Camp</button>
+		<div style="text-align: left; margin-top: 2%"><a href="/campgrounds/">Go Back</a></div>
+	</form>
 </div>
-<% include partials/footer %>
