--- a/YelpCamp/views/partials/header.ejs
+++ b/YelpCamp/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <head>
 	<title>YelpCamp</title>
 	<link rel="stylesheet" type="text/css" href="/lib/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
 </head>
 <body>
 
@@ -22,10 +22,14 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="links">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Logout</a></li>
-        <li><a href="#">Register</a></li>
-      </ul>
+				<% if(!currentUser){ %>
+	        <li><a href="/login/">Login</a></li>
+					<li><a href="/register/">Register</a></li>
+				<% } else{ %>
+					<li><a href="#"><strong><%= currentUser.username %></strong></a></li>
+					<li><a href="/logout/">Logout</a></li>
+				<% } %>
+			</ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
