--- a/YelpCamp/views/home.ejs
+++ b/YelpCamp/views/home.ejs
@@ -1,5 +1,19 @@
 <% include partials/header %>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/stylesheets/landing.css">
+<div class="container">
+ 	<div class="row">
+ 		<div class="col-lg-12">
+ 			<div class="content">
+ 				<h1>YelpCamp</h1>
+ 				<h3>Start planning your next trip today</h3>
+ 				<hr>
+ 				<a href="/campgrounds" class="btn btn-default btn-lg"><i class="fa fa-tree"></i> Get Started!</a>
+ 			</div>
+ 		</div>
+ 	</div>
+ </div>
 
-<h1>Welcome to Yelp Camp</h1>
-<h4><a href="/campgrounds">Our camps</a>
+ <script src="js/background.js"></script>
+
 <% include partials/footer %>
